feature: improve weather info with new api
