# RouteBoard/GeneratedClient/openapi.json
@@ -1368,9 +1368,63 @@
       "CurrentWeatherDto": {
         "type": "object",
         "properties": {
-          "dateTime": {
+          "time": {
             "type": "string",
             "nullable": true
+          },
+          "interval": {
+            "type": "integer",
+            "format": "int32"
+          },
+          "temperature2m": {
+            "type": "number",
+            "format": "double"
+          },
+          "relativeHumidity2m": {
+            "type": "integer",
+            "format": "int32"
+          },
+          "windSpeed10m": {
+            "type": "number",
+            "format": "double"
+          },
+          "windDirection10m": {
+            "type": "integer",
+            "format": "int32"
+          },
+          "weatherCode": {
+            "type": "integer",
+            "format": "int32"
+          }
+        },
+        "additionalProperties": false
+      },
+      "DailyWeatherDto": {
+        "type": "object",
+        "properties": {
+          "date": {
+            "type": "string",
+            "nullable": true
+          },
+          "weatherCode": {
+            "type": "integer",
+            "format": "int32"
+          },
+          "temperature2mMax": {
+            "type": "number",
+            "format": "double"
+          },
+          "temperature2mMin": {
+            "type": "number",
+            "format": "double"
+          },
+          "apparentTemperatureMax": {
+            "type": "number",
+            "format": "double"
+          },
+          "apparentTemperatureMin": {
+            "type": "number",
+            "format": "double"
           },
           "sunrise": {
             "type": "string",
@@ -1380,111 +1434,25 @@
             "type": "string",
             "nullable": true
           },
-          "temperature": {
+          "uvIndexMax": {
             "type": "number",
             "format": "double"
           },
-          "feelsLike": {
+          "precipitationSum": {
             "type": "number",
             "format": "double"
           },
-          "pressure": {
+          "precipitationProbabilityMax": {
             "type": "integer",
             "format": "int32"
           },
-          "humidity": {
+          "windSpeed10mMax": {
+            "type": "number",
+            "format": "double"
+          },
+          "windDirection10mDominant": {
             "type": "integer",
             "format": "int32"
-          },
-          "dewPoint": {
-            "type": "number",
-            "format": "double"
-          },
-          "uvIndex": {
-            "type": "number",
-            "format": "double"
-          },
-          "clouds": {
-            "type": "integer",
-            "format": "int32"
-          },
-          "visibility": {
-            "type": "integer",
-            "format": "int32"
-          },
-          "windSpeed": {
-            "type": "number",
-            "format": "double"
-          },
-          "windDegree": {
-            "type": "integer",
-            "format": "int32"
-          },
-          "windGust": {
-            "type": "number",
-            "format": "double"
-          },
-          "weather": {
-            "$ref": "#/components/schemas/WeatherDto"
-          }
-        },
-        "additionalProperties": false
-      },
-      "DailyForecastDto": {
-        "type": "object",
-        "properties": {
-          "date": {
-            "type": "string",
-            "nullable": true
-          },
-          "temperature": {
-            "$ref": "#/components/schemas/TemperatureDto"
-          },
-          "feelsLike": {
-            "$ref": "#/components/schemas/FeelsLikeDto"
-          },
-          "pressure": {
-            "type": "integer",
-            "format": "int32"
-          },
-          "humidity": {
-            "type": "integer",
-            "format": "int32"
-          },
-          "dewPoint": {
-            "type": "number",
-            "format": "double"
-          },
-          "windSpeed": {
-            "type": "number",
-            "format": "double"
-          },
-          "windDegree": {
-            "type": "integer",
-            "format": "int32"
-          },
-          "windGust": {
-            "type": "number",
-            "format": "double"
-          },
-          "weather": {
-            "$ref": "#/components/schemas/WeatherDto"
-          },
-          "clouds": {
-            "type": "integer",
-            "format": "int32"
-          },
-          "probabilityOfPrecipitation": {
-            "type": "number",
-            "format": "double"
-          },
-          "rain": {
-            "type": "number",
-            "format": "double"
-          },
-          "uvIndex": {
-            "type": "number",
-            "format": "double"
           }
         },
         "additionalProperties": false
@@ -1539,28 +1507,6 @@
         },
         "additionalProperties": false
       },
-      "FeelsLikeDto": {
-        "type": "object",
-        "properties": {
-          "day": {
-            "type": "number",
-            "format": "double"
-          },
-          "night": {
-            "type": "number",
-            "format": "double"
-          },
-          "evening": {
-            "type": "number",
-            "format": "double"
-          },
-          "morning": {
-            "type": "number",
-            "format": "double"
-          }
-        },
-        "additionalProperties": false
-      },
       "GradeCountDto": {
         "type": "object",
         "properties": {
@@ -1585,63 +1531,40 @@
         ],
         "type": "string"
       },
-      "HourlyForecastDto": {
+      "HourlyWeatherDto": {
         "type": "object",
         "properties": {
-          "dateTime": {
+          "time": {
             "type": "string",
             "nullable": true
           },
-          "temperature": {
+          "temperature2m": {
             "type": "number",
             "format": "double"
           },
-          "feelsLike": {
-            "type": "number",
-            "format": "double"
-          },
-          "pressure": {
+          "relativeHumidity2m": {
             "type": "integer",
             "format": "int32"
           },
-          "humidity": {
+          "rain": {
+            "type": "number",
+            "format": "double"
+          },
+          "weatherCode": {
             "type": "integer",
             "format": "int32"
           },
-          "dewPoint": {
+          "windSpeed10m": {
             "type": "number",
             "format": "double"
           },
-          "uvIndex": {
-            "type": "number",
-            "format": "double"
-          },
-          "clouds": {
+          "windDirection10m": {
             "type": "integer",
             "format": "int32"
           },
-          "visibility": {
+          "precipitationProbability": {
             "type": "integer",
             "format": "int32"
-          },
-          "windSpeed": {
-            "type": "number",
-            "format": "double"
-          },
-          "windDegree": {
-            "type": "integer",
-            "format": "int32"
-          },
-          "windGust": {
-            "type": "number",
-            "format": "double"
-          },
-          "weather": {
-            "$ref": "#/components/schemas/WeatherDto"
-          },
-          "probabilityOfPrecipitation": {
-            "type": "number",
-            "format": "double"
           }
         },
         "additionalProperties": false
@@ -2298,36 +2221,6 @@
         },
         "additionalProperties": false
       },
-      "TemperatureDto": {
-        "type": "object",
-        "properties": {
-          "day": {
-            "type": "number",
-            "format": "double"
-          },
-          "min": {
-            "type": "number",
-            "format": "double"
-          },
-          "max": {
-            "type": "number",
-            "format": "double"
-          },
-          "night": {
-            "type": "number",
-            "format": "double"
-          },
-          "evening": {
-            "type": "number",
-            "format": "double"
-          },
-          "morning": {
-            "type": "number",
-            "format": "double"
-          }
-        },
-        "additionalProperties": false
-      },
       "UserDto": {
         "type": "object",
         "properties": {
@@ -2422,45 +2315,23 @@
         },
         "additionalProperties": false
       },
-      "WeatherDto": {
-        "type": "object",
-        "properties": {
-          "id": {
-            "type": "integer",
-            "format": "int32"
-          },
-          "main": {
-            "type": "string",
-            "nullable": true
-          },
-          "description": {
-            "type": "string",
-            "nullable": true
-          },
-          "icon": {
-            "type": "string",
-            "nullable": true
-          }
-        },
-        "additionalProperties": false
-      },
       "WeatherResponseDto": {
         "type": "object",
         "properties": {
-          "currentWeather": {
+          "current": {
             "$ref": "#/components/schemas/CurrentWeatherDto"
           },
           "hourly": {
             "type": "array",
             "items": {
-              "$ref": "#/components/schemas/HourlyForecastDto"
+              "$ref": "#/components/schemas/HourlyWeatherDto"
             },
             "nullable": true
           },
           "daily": {
             "type": "array",
             "items": {
-              "$ref": "#/components/schemas/DailyForecastDto"
+              "$ref": "#/components/schemas/DailyWeatherDto"
             },
             "nullable": true
           }
